--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vm-application",
+  "name": "react-redux-jwt-auth",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,19 +7,24 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/pickers": "^3.3.10",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.5.2",
     "final-form": "^4.20.2",
     "final-form-material-ui": "^0.3.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-final-form": "^6.5.3",
-    "react-redux": "^7.2.3",
+    "react-material-ui-form-validator": "^2.1.4",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "3.4.3",
+    "react-validation": "^3.0.7",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "validator": "^13.1.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -45,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.8"
   }
 }
